--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <a class="custom-link" href="#" target="_blank">
         <div>Frontend Mentor</div>
       </a>
+      <!-- Section Social links-->
       <a class="custom-link" href="#" target="_blank">
         <div>Linkedin</div>
       </a>
